@@ -1,28 +1,18 @@
 package com.project.financeapi.service;
 
-import com.project.financeapi.dto.Installment.InstallmentDTO;
-import com.project.financeapi.dto.Installment.InstallmentResponseDTO;
-import com.project.financeapi.dto.OperationType.OperationTypeResponseDTO;
-import com.project.financeapi.dto.account.ResponseAccountDTO;
+import com.project.financeapi.dto.Installments.InstallmentDTO;
+import com.project.financeapi.dto.Installments.InstallmentResponseDTO;
+import com.project.financeapi.dto.Installments.UpdateInstallmentRequestDTO;
 import com.project.financeapi.dto.invoice.CreateInvoiceRequestDTO;
 import com.project.financeapi.dto.invoice.InvoiceResponseDTO;
-import com.project.financeapi.dto.operationGroup.OperationGroupResponseDTO;
-import com.project.financeapi.dto.transaction.TransactionResponseDTO;
-import com.project.financeapi.dto.user.UserResponseDTO;
-import com.project.financeapi.dto.util.JwtPayload;
-import com.project.financeapi.entity.Invoice;
-import com.project.financeapi.entity.Installment;
-import com.project.financeapi.entity.OperationType;
-import com.project.financeapi.entity.User;
+import com.project.financeapi.entity.*;
 import com.project.financeapi.entity.base.AccountBase;
 import com.project.financeapi.entity.base.PaymentInstrumentBase;
 import com.project.financeapi.entity.base.PersonBase;
 import com.project.financeapi.exception.BusinessException;
 import com.project.financeapi.repository.*;
-import com.project.financeapi.util.JwtUtil;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.jetbrains.annotations.NotNull;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
@@ -34,41 +24,38 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class InvoiceService {
 
-    private final UserRepository userRepository;
     private final PersonRepository personRepository;
     private final InvoiceRepository invoiceRepository;
     private final AccountRepository accountRepository;
     private final InstallmentRepository installmentRepository;
     private final OperationTypeRepository operationTypeRepository;
     private final PaymentInstrumentRepository paymentInstrumentRepository;
-    private final JwtUtil jwtUtil;
-
+    private final UserContextService userContextService;
+    private final DeactivatedOperationTypeRepository deactivatedTypeRepo;
+    private final DeactivatedOperationGroupRepository deactivatedGroupRepo;
 
     @Transactional
-    public InvoiceResponseDTO create(String token, CreateInvoiceRequestDTO dto) {
+    public InvoiceResponseDTO create(CreateInvoiceRequestDTO dto) {
 
-        JwtPayload payload = jwtUtil.extractPayload(token);
+        User user = userContextService.getAuthenticatedUser();
 
-        User user = userRepository.findById(payload.id())
-                .orElseThrow(() -> new BusinessException(
-                        HttpStatus.NOT_FOUND, "Usuário não encontrado"
-                ));
-
-        PersonBase person = personRepository.findById(dto.personId())
+        PersonBase person = personRepository.findByIdAndCreatedBy(dto.personId(), user)
                 .orElseThrow(() -> new BusinessException(
                         HttpStatus.NOT_FOUND, "Pessoa não encontrada"
                 ));
 
-        AccountBase account = accountRepository.findById(dto.accountId())
-                .orElseThrow(() -> new BusinessException(
-                        HttpStatus.NOT_FOUND, "Conta não encontrada"
-                ));
-
         OperationType operationType =
-                operationTypeRepository.findByCreatedByAndId(user, dto.operationTypeId())
+                operationTypeRepository.findByUserIdAndId(user.getId(), dto.operationTypeId())
                         .orElseThrow(() -> new BusinessException(
                                 HttpStatus.NOT_FOUND, "Tipo de operação inválido"
                         ));
+
+        boolean isTypeDeactivated = deactivatedTypeRepo.findByUserIdAndOperationTypeId(user.getId(), operationType.getId()).isPresent();
+        boolean isGroupDeactivated = deactivatedGroupRepo.findByUserIdAndOperationGroupId(user.getId(), operationType.getGroup().getId()).isPresent();
+
+        if (isTypeDeactivated || isGroupDeactivated) {
+            throw new BusinessException(HttpStatus.BAD_REQUEST, "Não é possível usar um Tipo ou Grupo de Operação inativado para criar uma fatura.");
+        }
 
         BigDecimal sumInstallments = dto.installments().stream()
                 .map(InstallmentDTO::amount)
@@ -82,10 +69,8 @@ public class InvoiceService {
         }
 
         Invoice invoice = invoiceRepository.save(new Invoice(
-                dto.totalAmount(),
                 user,
                 person,
-                account,
                 operationType
         ));
 
@@ -115,113 +100,185 @@ public class InvoiceService {
                                     "Instrumento de pagamento inválido"
                             ));
 
+            // Consome o limite do cartão
+            if (instrument instanceof CreditCard card) {
+                BigDecimal totalAmountForCard = entry.getValue().stream()
+                        .map(InstallmentDTO::amount)
+                        .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+                card.consumeLimit(totalAmountForCard);
+                paymentInstrumentRepository.save(card);
+            }
+
             List<InstallmentDTO> processed =
-                    instrument.process(entry.getValue());
+                    instrument.process(entry.getValue(), dto.purchaseDate());
 
             processedInstallments.addAll(processed);
         }
 
-        // 🔹 Cria entidades
         List<Installment> installments = processedInstallments.stream()
-                .map(dtoItem -> new Installment(
-                        dtoItem.amount(),
-                        dtoItem.dueDate(),
-                        operationType.getMovementType(),
-                        dtoItem.parcelNumber(),
-                        user,
-                        invoice,
-                        paymentInstrumentRepository.getReferenceById(dtoItem.instrument())
-                ))
+                .map(dtoItem -> {
+                    AccountBase installmentAccount = accountRepository.findById(dtoItem.accountId())
+                            .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "Conta não encontrada para a parcela " + dtoItem.parcelNumber()));
+
+                    return new Installment(
+                            dtoItem.amount(),
+                            dtoItem.dueDate(),
+                            operationType.getMovementType(),
+                            dtoItem.movementDirection(),
+                            dtoItem.parcelNumber(),
+                            user,
+                            invoice,
+                            paymentInstrumentRepository.getReferenceById(dtoItem.instrument()),
+                            installmentAccount
+                    );
+                })
                 .toList();
 
         installmentRepository.saveAll(installments);
-
         invoice.setInstallments(installments);
 
-        return toDocumentResponseDTO(invoice);
+        return invoice.toResponse();
     }
 
-
-    public List<InvoiceResponseDTO> findAll(String token) {
-
-        JwtPayload payload = jwtUtil.extractPayload(token);
-
-        User user = userRepository.findById(payload.id())
-                .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "O usuário informado não existe"));
-
-
+    public List<InvoiceResponseDTO> findAll() {
+        User user = userContextService.getAuthenticatedUser();
         List<Invoice> invoices = invoiceRepository.findByCreatedBy(user);
-
-        return invoices.stream()
-                .map(this::toDocumentResponseDTO)
-                .collect(Collectors.toList());
+        return invoices.stream().map(Invoice::toResponse).toList();
     }
-    public InvoiceResponseDTO findById(String token, UUID id) {
 
-        JwtPayload payload = jwtUtil.extractPayload(token);
+    public InvoiceResponseDTO findById(UUID id) {
+        User user = userContextService.getAuthenticatedUser();
+        Invoice invoice = invoiceRepository.findByIdAndCreatedBy(id, user).orElseThrow(() ->
+                new BusinessException(HttpStatus.NOT_FOUND, "O documento informado não existe.")
+        );
+        return invoice.toResponse();
+    }
 
-        User user = userRepository.findById(payload.id())
-                .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "O usuário informado não existe"));
+    @Transactional
+    public void deleteInvoice(UUID id) {
+        User user = userContextService.getAuthenticatedUser();
 
-        Invoice invoice = invoiceRepository.findByIdAndCreatedBy(id, user).orElseThrow(() -> new RuntimeException(
-                "O documento informado não exite."
-        ));
-
-        return toDocumentResponseDTO(
-                invoice
+        Invoice invoice = invoiceRepository.findByIdAndCreatedBy(id, user).orElseThrow(() ->
+                new BusinessException(HttpStatus.NOT_FOUND, "O documento informado não existe.")
         );
 
-    }
-    public InvoiceResponseDTO toDocumentResponseDTO(@NotNull Invoice invoice) {
+        if (invoice.getTotalPaid().add(invoice.getTotalDiscount()).compareTo(BigDecimal.ZERO) > 0) {
+            throw new BusinessException(HttpStatus.BAD_REQUEST, "Não é possível excluir uma fatura que já possui transações (pagamentos ou descontos). Estorne as transações antes de excluir.");
+        }
 
-        return new InvoiceResponseDTO(
-                invoice.getId(),
-                invoice.getAccount().getId(),
-                invoice.getIssueDate(),
-                invoice.getPaymentStatus(),
-                invoice.getQuantityInstallments(),
-                invoice.getTotalAmount(),
-                invoice.getTotalPaid(),
-                invoice.getRemainingBalance(),
-                new OperationTypeResponseDTO(
-                        invoice.getOperationType().getId(),
-                        invoice.getOperationType().getName(),
-                        invoice.getOperationType().getMovementType(),
-                        invoice.getOperationType().getOperationStatus(),
-                        invoice.getOperationType().getIsGlobal(),
-                        new OperationGroupResponseDTO(
-                                invoice.getOperationType().getGroup().getId(),
-                                invoice.getOperationType().getName(),
-                                invoice.getOperationType().getGroup().getIsGlobal(),
-                                invoice.getOperationType().getGroup().getOperationStatus()
-                        )
-                ),
-                invoice.getInstallments().stream().map(
-                        installment -> new InstallmentResponseDTO(
-                                installment.getId(),
-                                installment.getAmount(),
-                                installment.getCreatedAt(),
-                                installment.getDueDate(),
-                                installment.getMovementType(),
-                                installment.isPaid(),
-                                installment.getParcelNumber(),
-                                installment.getInvoice().getId(),
-                                installment.getTransactions().stream().map(
-                                        transaction -> new TransactionResponseDTO(
-                                                transaction.getId(),
-                                                transaction.getInstallment().getId(),
-                                                transaction.getAccount().getId(),
-                                                transaction.getAmount(),
-                                                transaction.getInstallment().getMovementType(),
-                                                transaction.getIsReversed(),
-                                                transaction.getPaymentDate(),
-                                                transaction.getCreatedAt(),
-                                                transaction.getObservations()
-                                        )
-                                ).toList()
-                        )
-                ).toList()
+        // Liberar o limite de todos os cartões envolvidos antes de excluir
+        for (Installment installment : invoice.getInstallments()) {
+            if (installment.getPaymentInstrument() instanceof CreditCard card) {
+                card.freeUpLimit(installment.getAmount());
+                paymentInstrumentRepository.save(card);
+            }
+        }
+
+        invoiceRepository.delete(invoice);
+    }
+
+    @Transactional
+    public void deleteInstallment(UUID installmentId) {
+        User user = userContextService.getAuthenticatedUser();
+
+        Installment installment = installmentRepository.findById(installmentId).orElseThrow(() ->
+                new BusinessException(HttpStatus.NOT_FOUND, "A parcela informada não existe.")
         );
+
+        if (!installment.getCreatedBy().getId().equals(user.getId())) {
+            throw new BusinessException(HttpStatus.FORBIDDEN, "Você não tem permissão para excluir esta parcela.");
+        }
+
+        if (installment.getTotalPaid().add(installment.getTotalDiscount()).compareTo(BigDecimal.ZERO) > 0) {
+            throw new BusinessException(HttpStatus.BAD_REQUEST, "Não é possível excluir uma parcela que possui saldo já amortizado. Faça o estorno dos pagamentos primeiro.");
+        }
+
+        Invoice invoice = installment.getInvoice();
+
+        // Liberar limite do cartão caso essa parcela esteja vinculada a um
+        if (installment.getPaymentInstrument() instanceof CreditCard card) {
+            card.freeUpLimit(installment.getAmount());
+            paymentInstrumentRepository.save(card);
+        }
+
+        if (invoice.getInstallments().size() == 1) {
+            invoiceRepository.delete(invoice);
+        } else {
+            invoice.getInstallments().remove(installment);
+            installmentRepository.delete(installment);
+        }
     }
 
+    @Transactional
+    public InstallmentResponseDTO updateInstallment(UUID installmentId, UpdateInstallmentRequestDTO dto) {
+        User user = userContextService.getAuthenticatedUser();
+
+        Installment installment = installmentRepository.findById(installmentId).orElseThrow(() ->
+                new BusinessException(HttpStatus.NOT_FOUND, "A parcela informada não existe.")
+        );
+
+        if (!installment.getCreatedBy().getId().equals(user.getId())) {
+            throw new BusinessException(HttpStatus.FORBIDDEN, "Você não tem permissão para editar esta parcela.");
+        }
+
+        BigDecimal amortized = installment.getTotalPaid().add(installment.getTotalDiscount());
+        if (dto.amount().compareTo(amortized) < 0) {
+            throw new BusinessException(HttpStatus.BAD_REQUEST,
+                    "O novo valor (R$ " + dto.amount() + ") não pode ser menor que o valor já amortizado (R$ " + amortized + "). Estorne o pagamento primeiro.");
+        }
+
+        // 🌟 LÓGICA DE TROCA DE INSTRUMENTO E AJUSTE DE LIMITE 🌟
+        PaymentInstrumentBase oldInstrument = installment.getPaymentInstrument();
+        BigDecimal oldAmount = installment.getAmount();
+        BigDecimal newAmount = dto.amount();
+
+        PaymentInstrumentBase newInstrument = null;
+        if (dto.paymentInstrumentId() != null) {
+            newInstrument = paymentInstrumentRepository.findByIdAndUser(dto.paymentInstrumentId(), user.getId())
+                    .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "Instrumento não encontrado."));
+        }
+
+        // Verifica se houve troca de instrumento (de A para B, de Nulo para A, ou de A para Nulo)
+        boolean instrumentChanged = false;
+        if (oldInstrument == null && newInstrument != null) instrumentChanged = true;
+        else if (oldInstrument != null && newInstrument == null) instrumentChanged = true;
+        else if (oldInstrument != null && newInstrument != null && !oldInstrument.getId().equals(newInstrument.getId())) instrumentChanged = true;
+
+        if (instrumentChanged) {
+            // 1. Devolve o limite para o instrumento ANTIGO (se era cartão)
+            if (oldInstrument instanceof CreditCard oldCard) {
+                oldCard.freeUpLimit(oldAmount);
+                paymentInstrumentRepository.save(oldCard);
+            }
+            // 2. Consome o limite do instrumento NOVO (se for cartão)
+            if (newInstrument instanceof CreditCard newCard) {
+                newCard.consumeLimit(newAmount);
+                paymentInstrumentRepository.save(newCard);
+            }
+        } else {
+            // Instrumento não mudou. Se for cartão, ajusta apenas a diferença matemática
+            if (oldInstrument instanceof CreditCard card) {
+                BigDecimal difference = newAmount.subtract(oldAmount);
+
+                if (difference.compareTo(BigDecimal.ZERO) > 0) {
+                    card.consumeLimit(difference); // Aumentou o valor da parcela
+                } else if (difference.compareTo(BigDecimal.ZERO) < 0) {
+                    card.freeUpLimit(difference.abs()); // Diminuiu o valor da parcela
+                }
+                paymentInstrumentRepository.save(card);
+            }
+        }
+
+        // Atualiza a Conta
+        AccountBase account = accountRepository.findById(dto.accountId())
+                .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "Conta não encontrada."));
+
+        installment.setAccount(account);
+        installment.setPaymentInstrument(newInstrument);
+        installment.setAmount(newAmount);
+        installment.setDueDate(dto.dueDate());
+
+        return installmentRepository.save(installment).toResponse();
+    }
 }
